--- a/test/fixtures/ezr_content_objects.yml
+++ b/test/fixtures/ezr_content_objects.yml
@@ -8,4 +8,4 @@ sheet_music_symphony_in_c:
   id: 101
   identifier: sheet_music_symphony_in_c
   display_name: Symphony in C
-  ezr_content_class_id: sheet_music
+  ezr_content_class_id: 301
