Moved site specific code to app/ezr.

--- a/config/ezr/main_config.yml
+++ b/config/ezr/main_config.yml
@@ -2,7 +2,7 @@
   :design:
     :directories: [default]
   :env:
-    :debug_mode: true
+    :debug_mode: <%= true %>
 
 :ubs:
   <<: *default_settings
